--- a/app/build.gradle
+++ b/app/build.gradle
@@ -41,42 +41,39 @@ android {
 
 dependencies {
     //room
-    implementation "androidx.room:room-runtime:2.4.0"
-    kapt "androidx.room:room-compiler:2.4.0"
-    implementation "androidx.room:room-ktx:2.4.0"
-    //Glide
-    implementation 'com.github.bumptech.glide:glide:4.12.0'
-    //dagger 2
-    implementation 'com.google.dagger:dagger:2.35.1'
-    kapt 'com.google.dagger:dagger-compiler:2.35.1'
+    implementation Room.runtime
+    kapt Room.compiler
+    implementation Room.room_ktx
     //Gson
-    implementation 'com.google.code.gson:gson:2.8.8'
+    implementation Gson.gson
     //Retrofit
-    implementation 'com.squareup.retrofit2:retrofit:2.9.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.9.0'
-    implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
+    implementation Retrofit.retrofit
+    implementation Retrofit.converter_gson
+    implementation Retrofit.rxjava_adapter
     //okHttp
-    implementation "com.squareup.okhttp3:logging-interceptor:4.9.0"
+    implementation OkHttp.interceptor
     //Koin
-    def koin_version = "3.1.2"
-    implementation "io.insert-koin:koin-core:$koin_version"
-    implementation "io.insert-koin:koin-android:$koin_version"
-    implementation "io.insert-koin:koin-android-compat:$koin_version"
+    implementation Koin.compat
+    implementation Koin.core
+    implementation Koin.koin_android
     //Coil
-    implementation 'io.coil-kt:coil:0.11.0'
+    implementation Coil.coil
     //coroutine
-    implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.6.0-RC2'
+    implementation Coroutines.core
     //viewModel
-    implementation 'androidx.lifecycle:lifecycle-livedata-ktx:2.4.0'
-    implementation 'androidx.lifecycle:lifecycle-viewmodel-ktx:2.4.0'
+    implementation ViewModel.viewmodel_ktx
+    implementation ViewModel.livedata_ktx
     //fragment ktx
-    implementation 'androidx.fragment:fragment-ktx:1.4.0'
+    implementation FragmentKtx.ktx
+
     implementation "org.jetbrains.kotlin:kotlin-stdlib:$kotlin_version"
     implementation 'androidx.core:core-ktx:1.7.0'
-    implementation 'androidx.appcompat:appcompat:1.4.0'
-    implementation 'com.google.android.material:material:1.4.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.1.2'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.3'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
+    //design
+    implementation Design.appcompat
+    implementation Design.material
+    implementation Design.constraint_layout
+
+    testImplementation TestImpl.junit
+    androidTestImplementation TestImpl.ext_junit
+    androidTestImplementation TestImpl.espresso
 }
